import java.util.ArrayList;

public class Grupo extends EtapaMundial{
    public ArrayList<Equipo> getEquiposQueAvanzan (Equipo equipo){
        return new ArrayList<Equipo>();
    }
}
