import java.util.ArrayList;

public class Llave extends EtapaMundial{
    public ArrayList<Equipo> getEquiposQueAvanzan (Equipo equipo){
        return new ArrayList<Equipo>();
    }
}
