public class Main {
    private static Grupo grupo;

    public static void main(String[] args) {

        //crear los equipos
    Equipo equipo1 = new Equipo("Alemania");
    Equipo equipo2 = new Equipo("Bélgica");
    Equipo equipo3 = new Equipo("Qatar");
    Equipo equipo4 = new Equipo("Dinamarca");
    Equipo equipo5 = new Equipo("Francia");
    Equipo equipo6 = new Equipo("Inglaterra");
    Equipo equipo7 = new Equipo("México");
    Equipo equipo8 = new Equipo("Serbia");
    Equipo equipo9 = new Equipo("Arabia Saudita");
    Equipo equipo10 = new Equipo("Brasil");
    Equipo equipo11 = new Equipo("Corea Del Sur");
    Equipo equipo12 = new Equipo("Ecuador");
    Equipo equipo13 = new Equipo("Gales");
    Equipo equipo14 = new Equipo("Irán");
    Equipo equipo15 = new Equipo("Australia");
    Equipo equipo16 = new Equipo("Camerún");
    Equipo equipo17 = new Equipo("Estados Unidos");
    Equipo equipo18 = new Equipo("Ghana");
    Equipo equipo19 = new Equipo("Senegal");
    Equipo equipo20 = new Equipo("Túnez");
    Equipo equipo21 = new Equipo("Cánada");
    Equipo equipo22 = new Equipo("Costa Rica");
    Equipo equipo23 = new Equipo("Holanda");
    Equipo equipo24 = new Equipo("Japón");
    Equipo equipo25 = new Equipo("Polonia");
    Equipo equipo26 = new Equipo("Uruguay");
    Equipo equipo27 = new Equipo("Argentina");
    Equipo equipo28 = new Equipo("Croacia");
    Equipo equipo29 = new Equipo("España");
    Equipo equipo30 = new Equipo("Marruecos");
    Equipo equipo31 = new Equipo("Portugal");
    Equipo equipo32 = new Equipo("Suiza");

    }
}