@startuml
class Partido {
- Date fecha
- Equipo local
- Equipo visitante
- Resultado resultado
+ <<Create>> Partido(Date,Equipo,Equipo)
+ Date getFecha()
+ void setFecha(Date)
+ Equipo getLocal()
+ void setLocal(Equipo)
+ Equipo getVisitante()
+ void setVisitante(Equipo)
+ Resultado getResultado()
+ void setResultado(Resultado)
}
class Resultado {
- int golesLocal
- int golesVisitante
- boolean ganoLocal
- boolean empate
+ boolean ganoLocal()
+ boolean Empate()
+ int getGolesLocal()
+ void setGolesLocal(int)
+ int getGolesVisitante()
+ void setGolesVisitante(int)
}
class EtapaMundial {
- String descripcionEtapa
- ArrayList<Partido> partidos
+ <<Create>> EtapaMundial()
+ String getDescripcionEtapa()
+ void addPartido(Partido)
+ ArrayList<Partido> getPartido(Partido)
+ ArrayList<Equipo> getEquiposQueAvanzan(Equipo)
+ void setDescripcionEtapa(String)
+ ArrayList<Partido> getPartidos()
+ void setPartidos(ArrayList<Partido>)
}
class Equipo {
- String nombre
- ArrayList<Partido> partidosJugados
+ String getNombre()
+ void setNombre(String)
+ ArrayList<Partido> getPartidosJugados()
+ void setPartidosJugados(ArrayList<Partido>)
}
class Grupo {
+ ArrayList<Equipo> getEquiposQueAvanzan(Equipo)
}
class Main {
+ {static} void main(String[])
}
class Llave {
+ ArrayList<Equipo> getEquiposQueAvanzan(Equipo)
}


EtapaMundial <|-- Grupo
EtapaMundial <|-- Llave
@enduml